# exfatprogs

./: NEWS  configure.ac
.github/workflows/: c-cpp.yml
dump/: dump.c
exfat2img/: exfat2img.c
fsck/: fsck.c  fsck.c.orig  repair.c  repair.h
include/: exfat_dir.h  exfat_fs.h  exfat_ondisk.h  libexfat.h  version.h
label/: label.c
lib/: exfat_dir.c  exfat_fs.c  libexfat.c
manpages/: mkfs.exfat.8
mkfs/: mkfs.c
tests/: test_fsck.sh
tests/bad_dentries2/: exfat.img.tar.xz
tests/duplicated_name/: exfat.img.tar.xz
tests/invalid_name/: exfat.img.tar.xz
tune/: tune.c
